--- a/src/UI/Windows/Views/Pages/ConnectPage.xaml
+++ b/src/UI/Windows/Views/Pages/ConnectPage.xaml
@@ -162,13 +162,41 @@
                                               ClearButtonEnabled="False"
 											  MaxDecimalPlaces="0"/>
                             </StackPanel>
-                            <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Vertical">
-                                <CheckBox Name="UseSecureChannelCheckBox"
-                                    Content="Use Secure Channel" 
-                                          IsChecked="{Binding ViewModel.UseSecureChannel}"/>
-                                <CheckBox Content="Use Default Key" 
-                                          IsEnabled="{Binding ElementName=UseSecureChannelCheckBox, Path=IsChecked}"
-                                          IsChecked="{Binding ViewModel.UseDefaultKey}"/>
+                            <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" 
+                                        Margin="0,5,0,0"
+                                        Orientation="Vertical">
+	                            <StackPanel Orientation="Horizontal">
+		                            <CheckBox Name="UseSecureChannelCheckBox"
+		                                      Content="Use Secure Channel" 
+		                                      IsChecked="{Binding ViewModel.UseSecureChannel}"/>
+		                            
+		                            <CheckBox Name="UseDefaultKeyCheckBox"
+		                                      Content="Use Default Key" 
+		                                      Margin="10,0,0,0"
+		                                      IsEnabled="{Binding ElementName=UseSecureChannelCheckBox, Path=IsChecked}"
+		                                      IsChecked="{Binding ViewModel.UseDefaultKey}"/>
+	                            </StackPanel>
+	                           
+	                            <StackPanel Orientation="Vertical">
+		                            <Label Content="Security Key"
+		                                   Target="{Binding ElementName=AddressNumberBox}" />
+		                            <TextBox Text="{Binding ViewModel.SecurityKey}">
+			                            <TextBox.Style>
+				                            <Style TargetType="TextBox">
+					                            <Style.Triggers>
+						                            <MultiDataTrigger>
+							                            <MultiDataTrigger.Conditions>
+								                            <Condition Binding="{Binding ElementName=UseSecureChannelCheckBox, Path=IsChecked}" Value="True"/>
+								                            <Condition Binding="{Binding ElementName=UseDefaultKeyCheckBox, Path=IsChecked}" Value="False"/>
+							                            </MultiDataTrigger.Conditions>
+							                            <Setter Property="IsEnabled" Value="True"/>
+						                            </MultiDataTrigger>
+					                            </Style.Triggers>
+					                            <Setter Property="IsEnabled" Value="False"/>
+				                            </Style>
+			                            </TextBox.Style>
+		                            </TextBox>
+	                            </StackPanel>
                             </StackPanel>
                             
                             <ui:Button Grid.Row="1" Grid.Column="2"  Content="Connect"
