--- a/src/UI/Windows/Views/Controls/SetReaderLedControl.xaml
+++ b/src/UI/Windows/Views/Controls/SetReaderLedControl.xaml
@@ -3,9 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="clr-namespace:OSDPBench.Windows.Views.Controls"
              mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance controls:SetReaderLedControl}"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        
+        <StackPanel Orientation="Vertical">
+            <Label Content="LED Color"
+                   Target="{Binding ElementName=ColorComboBox}" />
+            <ComboBox Name="ColorComboBox"
+                      Margin="0 0 20 0"
+                      ItemsSource="{Binding AvailableColors}"
+                      SelectedItem="{Binding SelectedColor}"
+                      Width="200"
+                      HorizontalAlignment="Left" />
+        </StackPanel>
     </Grid>
 </UserControl>
