--- a/src/UI/Windows/Views/Pages/InfoPage.xaml
+++ b/src/UI/Windows/Views/Pages/InfoPage.xaml
@@ -4,8 +4,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:pages="clr-namespace:OSDPBench.Windows.Views.Pages"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
+    d:DataContext="{d:DesignInstance pages:InfoPage,
+									 IsDesignTimeCreatable=False}"
     Title="Info">
 
     <Grid Margin="20 30">
@@ -21,8 +24,8 @@
         <StackPanel Grid.Column="0"
                     Grid.Row="0">
             <ui:TextBlock Text="OSDP Bench" FontTypography="BodyStrong" />
-            <ui:TextBlock Text="Version 2.0" FontTypography="BodyStrong" />
-            <ui:TextBlock Text="© 2024 Z-bit Systems, LLC" FontTypography="BodyStrong" />
+            <ui:TextBlock Text="{Binding AppVersion}" FontTypography="BodyStrong" />
+            <ui:TextBlock Text="{Binding CopyWriteNotice}" FontTypography="BodyStrong" />
         </StackPanel>
 
         <Image Grid.Column="1"
