--- a/src/UI/Windows/Views/Controls/MonitorCardReadsControl.xaml
+++ b/src/UI/Windows/Views/Controls/MonitorCardReadsControl.xaml
@@ -9,7 +9,7 @@
              d:DataContext="{d:DesignInstance controls:MonitorCardReadsControl,
                                             IsDesignTimeCreatable=False}"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="500" d:DesignWidth="500">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -33,8 +33,9 @@
             </Grid.RowDefinitions>
             
             <DockPanel Grid.Row="0" 
-                       Margin="0,0,0,5">
-                <Label Content="Read History" 
+                       Margin="0,0,20,5">
+                <Label Content="Read History"
+                       VerticalAlignment="Bottom"
                        DockPanel.Dock="Left"/>
                 <Button Content="Clear History"
                         DockPanel.Dock="Right"
@@ -59,6 +60,7 @@
                         <DataGridTextColumn.ElementStyle>
                             <Style TargetType="TextBlock">
                                 <Setter Property="VerticalAlignment" Value="Center"/>
+                                <Setter Property="Padding" Value="5,0"/>
                             </Style>
                         </DataGridTextColumn.ElementStyle>
                     </DataGridTextColumn>
@@ -71,7 +73,7 @@
                                          BorderThickness="0"
                                          VerticalAlignment="Center"
                                          VerticalContentAlignment="Center"
-                                         Padding="0"
+                                         Padding="5 0"
                                          Background="Transparent"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
