--- a/src/UI/Windows/Views/Pages/MonitorPage.xaml
+++ b/src/UI/Windows/Views/Pages/MonitorPage.xaml
@@ -6,47 +6,76 @@
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       xmlns:local="clr-namespace:OSDPBench.Windows.Views.Pages"
       xmlns:models="clr-namespace:OSDPBench.Core.Models;assembly=OSDPBench.Core"
+      xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
       mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance local:MonitorPage,
 									 IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Monitor">
-	<Grid>
-		<DataGrid ItemsSource="{Binding ViewModel.TraceEntriesView}" 
-		          AutoGenerateColumns="False" 
-		          CanUserAddRows="False" 
-		          IsReadOnly="True" 
-		          Margin="10" 
-		          RowDetailsVisibilityMode="Collapsed">
+	
+	<Page.Resources>
+		<converters:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+	</Page.Resources>
+	
+	<StackPanel 
+		Orientation="Vertical"
+		Margin="0 5">
+		<StackPanel  Orientation="Vertical"
+		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Disconnected, Mode=OneWay}">
+			<TextBlock
+				FontSize="32"
+				Margin="20 10 20 0"
+				HorizontalAlignment="Center"
+				TextAlignment="Center"
+				TextWrapping="Wrap"
+				Foreground="Orange"
+				Text="Device is not connected"/>
+			<TextBlock
+				FontSize="24"
+				Margin="20 10 20 0"
+				HorizontalAlignment="Center"
+				TextAlignment="Center"
+				TextWrapping="Wrap"
+				Text="The Connection page will provide more details"/>
+		</StackPanel>
+		<StackPanel  Orientation="Vertical"
+		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}">
+			<DataGrid ItemsSource="{Binding ViewModel.TraceEntriesView}" 
+			          AutoGenerateColumns="False" 
+			          CanUserAddRows="False" 
+			          IsReadOnly="True" 
+			          Margin="10" 
+			          RowDetailsVisibilityMode="Collapsed">
 
-			<!-- DataGrid Columns -->
-			<DataGrid.Columns>
-				<DataGridTextColumn Header="TimeStamp" Binding="{Binding LocalTimestamp, StringFormat={}{0:HH:mm:ss.fff}}" />
-				<DataGridTextColumn Header="Interval (ms)" Binding="{Binding Interval.TotalMilliseconds, StringFormat={}{0:N0}}" />
-				<DataGridTextColumn Header="Direction" Binding="{Binding Direction}" />
-				<DataGridTextColumn Header="Address" Binding="{Binding Packet.Address}" />
-				<DataGridTextColumn Header="Type" Binding="{Binding Type}" />
-        
-				<!-- Button Column -->
-				<DataGridTemplateColumn Header="Details" Width="*">
-					<DataGridTemplateColumn.CellTemplate>
-						<DataTemplate>
-							<ui:Button Content="Expand" DataContext="{Binding Details}"
-							           Margin="5"
-							        Click="ToggleRowDetails" />
-						</DataTemplate>
-					</DataGridTemplateColumn.CellTemplate>
-				</DataGridTemplateColumn>
-			</DataGrid.Columns>
+				<!-- DataGrid Columns -->
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="TimeStamp" Binding="{Binding LocalTimestamp, StringFormat={}{0:HH:mm:ss.fff}}" />
+					<DataGridTextColumn Header="Interval (ms)" Binding="{Binding Interval.TotalMilliseconds, StringFormat={}{0:N0}}" />
+					<DataGridTextColumn Header="Direction" Binding="{Binding Direction}" />
+					<DataGridTextColumn Header="Address" Binding="{Binding Packet.Address}" />
+					<DataGridTextColumn Header="Type" Binding="{Binding Type}" />
+	        
+					<!-- Button Column -->
+					<DataGridTemplateColumn Header="Details" Width="*">
+						<DataGridTemplateColumn.CellTemplate>
+							<DataTemplate>
+								<ui:Button Content="Expand" DataContext="{Binding Details}"
+								           Margin="5"
+								        Click="ToggleRowDetails" />
+							</DataTemplate>
+						</DataGridTemplateColumn.CellTemplate>
+					</DataGridTemplateColumn>
+				</DataGrid.Columns>
 
-			<!-- RowDetailsTemplate -->
-			<DataGrid.RowDetailsTemplate>
-				<DataTemplate DataType="{x:Type models:PacketTraceEntry}">
-					<TextBlock Text="{Binding Details}"
-					           FontFamily="Consolas"
-					           Margin="10" />
-				</DataTemplate>
-			</DataGrid.RowDetailsTemplate>
-		</DataGrid>
-    </Grid>
+				<!-- RowDetailsTemplate -->
+				<DataGrid.RowDetailsTemplate>
+					<DataTemplate DataType="{x:Type models:PacketTraceEntry}">
+						<TextBlock Text="{Binding Details}"
+						           FontFamily="Consolas"
+						           Margin="10" />
+					</DataTemplate>
+				</DataGrid.RowDetailsTemplate>
+			</DataGrid>
+		</StackPanel>
+    </StackPanel>
 </Page>
