--- a/src/UI/Windows/Views/Pages/MonitorPage.xaml
+++ b/src/UI/Windows/Views/Pages/MonitorPage.xaml
@@ -40,11 +40,21 @@
 		</StackPanel>
 		<StackPanel  Orientation="Vertical"
 		             Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}">
+			<StackPanel Orientation="Horizontal" Margin="10 5">
+				<TextBlock Text="Outgoing Polls" Margin="0 0 5 0 "/>
+				<TextBlock Text="{Binding Path=ViewModel.NumberOfPolls}"
+				           Margin="0 0 15 0 "
+				           FontWeight="Bold"/>
+				<TextBlock Text="Ack Replies to Polls" Margin="0 0 5 0 "/>
+				<TextBlock Text="{Binding Path=ViewModel.NumberOfAcksToPolls}"
+				           Margin="0 0 15 0 "
+				           FontWeight="Bold"/>
+			</StackPanel>
 			<DataGrid ItemsSource="{Binding ViewModel.TraceEntriesView}" 
 			          AutoGenerateColumns="False" 
 			          CanUserAddRows="False" 
 			          IsReadOnly="True" 
-			          Margin="10" 
+			          Margin="10 5" 
 			          RowDetailsVisibilityMode="Collapsed">
 
 				<!-- DataGrid Columns -->
