--- a/src/UI/Windows/App.xaml
+++ b/src/UI/Windows/App.xaml
@@ -19,6 +19,11 @@
                 <Setter Property="Foreground" Value="LightGray"/>
                 <Setter Property="Margin" Value="10 0 0 0"/>
             </Style>
+            <Style TargetType="DataGridColumnHeader">
+                <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="Background" Value="#F0F0F0"/> 
+                <Setter Property="Padding" Value="10"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
