--- a/src/UI/Windows/Views/Pages/ManagePage.xaml
+++ b/src/UI/Windows/Views/Pages/ManagePage.xaml
@@ -41,7 +41,7 @@
                 Text="The Connection page will provide more details"/>
         </StackPanel>
         <StackPanel  Orientation="Vertical"
-                     Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected, Mode=OneWay}">
+                     Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Connected;Error, Mode=OneWay}">
             <TextBlock
                 FontSize="32"
                 Margin="20 10 20 0"
