--- a/src/UI/Windows/Views/Pages/ManagePage.xaml
+++ b/src/UI/Windows/Views/Pages/ManagePage.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:OSDPBench.Windows.Views.Pages"
       xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+      xmlns:controls="clr-namespace:OSDPBench.Windows.Views.Controls"
       mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance local:ManagePage,
 									 IsDesignTimeCreatable=False}"
@@ -19,9 +20,31 @@
     <StackPanel 
         Orientation="Vertical"
         Margin="0 5">
-        <TextBlock 
-            Text="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path=Title}"
-            Style="{StaticResource PageTitleStyle}"/>
+        <Grid Margin="10 5">
+            <TextBlock 
+                Text="{Binding RelativeSource={RelativeSource AncestorType=Page}, Path=Title}"
+                Style="{StaticResource PageTitleStyle}"/>
+            
+            <StackPanel Orientation="Horizontal" 
+                        HorizontalAlignment="Right" 
+                        VerticalAlignment="Center">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0 0 15 0">
+                    <TextBlock Text="Tx" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                    <controls:LedControl 
+                        LastActivityTime="{Binding Path=ViewModel.LastTxActiveTime}" 
+                        LedColor="Red" 
+                        VerticalAlignment="Center"/>
+                </StackPanel>
+            
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                    <TextBlock Text="Rx" VerticalAlignment="Center" Margin="0 0 5 0"/>
+                    <controls:LedControl 
+                        LastActivityTime="{Binding Path=ViewModel.LastRxActiveTime}" 
+                        LedColor="Red" 
+                        VerticalAlignment="Center"/>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
         <StackPanel  Orientation="Vertical"
                      Visibility="{Binding Path=ViewModel.StatusLevel, Converter={StaticResource StringToVisibilityConverter}, ConverterParameter=Disconnected, Mode=OneWay}">
             <TextBlock
